Navigating to the question screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,14 @@
         android:theme="@style/Theme.QuickQuizApp"
         tools:targetApi="31">
         <activity
+
+            android:name=".QuizQuestionsActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="true"
             android:theme="@style/NoActionBarTheme"
-            android:windowSoftInputMode="adjustResize"
-            >
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
